Fixed for java 17.